--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <center>
     <text>
-        <h1>Angelina</h1>
+        <i><h1>Currículo</h1></i>
     </text>
-    <text>Ensino Médio 3ºC</text>
+
+    <big>
+        <p>Nome:ㅤㅤㅤㅤㅤㅤㅤㅤㅤFone: <br>e-mail:ㅤㅤㅤㅤㅤㅤㅤㅤEndereço:</br></p>
+    </big>
+
+    </center>
 
 </body>
