--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="pt-br">
 
 <head><meta charset="utf-8"/>
-    <title>Currículo</title>
+    <title>Bolinho</title>
     <link rel="stylesheet" href="style.css">
+
+
+<style>
+body {
+    color: rgb(18, 65, 107);
+}
+h1 {
+    color: #445b9e;
+}
+p { color: #445b9e;}
+</style>
 </head>
 <body>
-    <center>
-    <text>
-        <i><h1>Currículo</h1></i>
-    </text>
-
-    <big>
-        <p>Nome:ㅤㅤㅤㅤㅤㅤㅤㅤㅤFone: <br>e-mail:ㅤㅤㅤㅤㅤㅤㅤㅤEndereço:</br></p>
-    </big>
-
-    </center>
-
+<h1>Bolinho</h1>
+<p>meow meow meow</p>
 </body>
