--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@ p { color: #445b9e;}
 </style>
 </head>
 <body>
-<h1>Bolinho</h1>
-<p>meow meow meow</p>
+    <div style="text-align:center">
+    <h1>Bolinho</h1>
+    <p>meow meow meow</p>
+        </div>
+
+<div class="container">
+<img src="gato.png" />
+</div>
 </body>
